<resources>
    <string name="app_name">JOBIM</string>
    <string name="call">התקשר</string>
    <string name="send_message">שלח הודעה</string>
    <string name="send_email">שלח מייל</string>
    <string name="job_title">%1$s is looking for a %2$s</string>
    <string name="add_to_favorites">הוסף למועדפים</string>
    <string name="remove_from_favorites">הסר מהמועדפים</string>
    <string name="more_from_employer">ג\'ובים נוספים למעסיק זה</string>
    <string name="share_button">שתף עם חברים</string>
    <string name="hide_job">הסתר</string>
    <string name="share_job">I found a job at %1$s as a %2$s!</string>
    <string name="add_job_1">אנא מלאו את הפרטים הבאים כדי ליצור ג\'וב חדש</string>
    <string name="add_job_2">אנא בחרו את הג\'וב שלכם</string>
    <string name="add_job_4">הכנס כתובת</string>
    <string name="add_job_5">כמה פרטים אחרונים</string>
    <string name="taking_picture_instructions">מומלץ לצרף תמונת אווירה קשורה לתפקיד או לבית העסק. \n לא להעלות סתם לוגו…</string>
    <string name="filter_checkbox">מתאים לבני נוער</string>
    <string name="filter_question_button">הוספת שאלת סינון למועמדים</string>
    <string name="name_place_holder">שם החברה</string>
    <string name="branch_place_holder">שם הסניף (לא חובה)</string>
    <string name="phone_place_holder">הכנס מספר טלפון</string>
    <string name="mail_place_holder">הכנס מייל</string>
    <string name="short_description_place_holder">כותרת קולעת (עד 50 תווים)</string>
    <string name="description_place_holder">תנו תיאור קצר של הג\'וב ב-2/3 משפטים</string>
    <string name="address_place_holder">הכנס כתובת כאן</string>
    <string name="new_job">פרסם ג\'וב חדש</string>
    <string name="next_button">הבא</string>
    <string name="save">שמור</string>
    <string name="cashier">קופאי/ת</string>
    <string name="support_agent">נציג/ת שירות</string>
    <string name="gas_filler">מתדלק/ת</string>
    <string name="security">מאבטח/ת</string>
    <string name="delivery">שליח/ה</string>
    <string name="cleaning">עובד/ת ניקיון</string>
    <string name="driver">נהג/ת</string>
    <string name="handyman">עובד/ת תחזוקה</string>
    <string name="home">עבודה מהבית</string>
    <string name="warehouse_worker">עובד/ת מחסן</string>
    <string name="real_estate">סוכנ/ת נדלן</string>
    <string name="bartender">ברמנ/ית</string>
    <string name="waiter">מלצר/ית</string>
    <string name="steward">סדרנ/ית</string>
    <string name="kitchen_worker">עובד/ת מטבח</string>
    <string name="teenager">בני נוער</string>
    <string name="barbershop">ספר/ית</string>
    <string name="salesman">דייל/ת מכירות</string>
    <string name="packing_worker">עובד/ת אריזה</string>
    <string name="cook">טבח/ית</string>
    <string name="user_name">יששכר בן דוד</string>
    <string name="user_address">עפרה</string>
    <string name="user_birth_year">1996</string>
    <string name="user_mail">myMail@gmail.com</string>
    <string name="details">הפרטים שלי</string>
    <string name="notifications">התראות</string>
    <string name="my_jobs">הג\'ובים שלי</string>
    <string name="find_job">מצא ג\'ובים</string>
    <string name="smart_agent">הסוכן החכם</string>
    <string name="about_us">קצת עלינו</string>
    <string name="menu">תפריט</string>
</resources>