<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/add_job_page_5"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="1dp"
            android:src="@drawable/pin_icon"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_job_page_4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_job_page_4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/location_icon"
            android:background="@color/orange"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@+id/add_job_page_5"
            app:layout_constraintStart_toEndOf="@+id/add_job_page_3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_job_page_3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/list_icon"
            android:background="@color/orange"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@+id/add_job_page_4"
            app:layout_constraintStart_toEndOf="@+id/add_job_page_2"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/add_job_page_2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/bag_icon"
            android:background="@color/orange"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@+id/add_job_page_3"
            app:layout_constraintStart_toEndOf="@+id/add_job_page_1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_job_page_1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/check_icon"
            android:background="@color/orange"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@+id/add_job_page_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_job_2"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_job_page_3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioGroup
            android:id="@+id/title_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <RadioButton
                android:id="@+id/cashier_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/cashier_icon"
                android:text="@string/cashier"/>
            <RadioButton
                android:id="@+id/support_agent_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/support_agent_icon"
                android:text="@string/support_agent"/>
            <RadioButton
                android:id="@+id/cook_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/cook_icon"
                android:text="@string/cook"/>
            <RadioButton
                android:id="@+id/gas_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/gas_icon"
                android:text="@string/gas_filler"/>
            <RadioButton
                android:id="@+id/security_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/security_icon"
                android:text="@string/security"/>
            <RadioButton
                android:id="@+id/delivery_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/delivery_icon"
                android:text="@string/delivery"/>
            <RadioButton
                android:id="@+id/cleaning_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/cleaning_icon"
                android:text="@string/cleaning"/>
            <RadioButton
                android:id="@+id/driver_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/driver_icon"
                android:text="@string/driver"/>
            <RadioButton
                android:id="@+id/handyman_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/handyman_icon"
                android:text="@string/handyman"/>
            <RadioButton
                android:id="@+id/home_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/home_icon"
                android:text="@string/home"/>
            <RadioButton
                android:id="@+id/warehouse_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/warehouse_icon"
                android:text="@string/warehouse_worker"/>
            <RadioButton
                android:id="@+id/real_estate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/real_estate_icon"
                android:text="@string/real_estate"/>
            <RadioButton
                android:id="@+id/bartender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/bartender_icon"
                android:text="@string/bartender"/>
            <RadioButton
                android:id="@+id/waiter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/waiter_icon"
                android:text="@string/waiter"/>
            <RadioButton
                android:id="@+id/steward_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/steward_icon"
                android:text="@string/steward"/>
            <RadioButton
                android:id="@+id/kitchen_worker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/kitchen_worker_icon"
                android:text="@string/kitchen_worker"/>
            <RadioButton
                android:id="@+id/teenager_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/teenager_icon"
                android:text="@string/teenager"/>
            <RadioButton
                android:id="@+id/barbershop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/barbershop_icon"
                android:text="@string/barbershop"/>
            <RadioButton
                android:id="@+id/salesman_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/salesman_icon"
                android:text="@string/salesman"/>
            <RadioButton
                android:id="@+id/packing_worker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawableEnd="@drawable/packing_worker_icon"
                android:text="@string/packing_worker"/>
<!--            <RadioButton-->
<!--                android:id="@+id/kinder_garden_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="6dp"-->
<!--                android:drawableEnd="@drawable/salesman_icon"-->
<!--                android:text="@string/salesman"/>-->
        </RadioGroup>
    </ScrollView>

</LinearLayout>