<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/add_job_page_5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="1dp"
        android:src="@drawable/pin_icon"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_5"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_4"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_2"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/add_job_page_2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_3"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_job_5"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_job_page_3" />

    <ImageView
        android:id="@+id/job_image"
        android:layout_width="97dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/image_instructions"
        android:layout_width="219dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:text="@string/taking_picture_instructions"
        app:layout_constraintEnd_toStartOf="@+id/job_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <EditText
        android:id="@+id/job_phone"
        android:layout_width="286dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:hint="@string/phone_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_instructions" />

    <EditText
        android:id="@+id/job_mail"
        android:layout_width="286dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:hint="@string/mail_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_phone" />

    <CheckBox
        android:id="@+id/is_good_for_teen"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/filter_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_mail" />

    <TextView
        android:id="@+id/add_question"
        android:layout_width="237dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/filter_question_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_good_for_teen" />

</androidx.constraintlayout.widget.ConstraintLayout>