<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/add_job_page_5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="1dp"
        android:src="@drawable/pin_icon"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/location_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_5"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/list_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_4"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_2"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/add_job_page_2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_3"
        app:layout_constraintStart_toEndOf="@+id/add_job_page_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_job_page_1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/check_icon"
        android:background="@color/orange"
        android:layout_margin="1dp"
        app:layout_constraintEnd_toStartOf="@+id/add_job_page_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/job_title"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_job_page_3" />

    <EditText
        android:id="@+id/short_description"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:hint="@string/short_description_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions" />

    <EditText
        android:id="@+id/description"
        android:layout_width="301dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:hint="@string/description_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/short_description" />
</androidx.constraintlayout.widget.ConstraintLayout>